# capricorn

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
include/capricorn/: ccpch.hpp
include/capricorn/base/: application.hpp  entrypoint.cpp  initialization_state.hpp  log.hpp  system_info.hpp  types.hpp  window.hpp
include/capricorn/graphics/: glfw_shared_state.hpp  graphics_context.hpp
include/capricorn/graphics/vulkan/: instance.hpp  instance_configurator.hpp  logical_device.hpp  swapchain.hpp  vulkan_utils.hpp
src/capricorn/: ccpch.cpp
src/capricorn/base/: application.cpp  log.cpp  system_info.cpp  window.cpp
src/capricorn/graphics/: glfw_shared_state.cpp  graphics_context.cpp
src/capricorn/graphics/vulkan/: instance.cpp  instance_configurator.cpp  logical_device.cpp  swapchain.cpp  vulkan_utils.cpp
